sas-core/main/default/objects/Segment__c/Segment__c.object-meta.xml
<CustomObject>
    <description>Individual segment, corresponding to a single flight, within a booking.</description>
    <label>Segment</label>
    <nameField>
        <label>Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>