sas-core/main/default/objects/Segment__c/fields/Baggage_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Baggage_Quantity__c</fullName>
    <label>Baggage Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>