sas-core/main/default/objects/Segment__c/fields/Booking_Class__c.field-meta.xml
<CustomField>
    <fullName>Booking_Class__c</fullName>
    <label>Booking Class</label>
    <length>10</length>
    <type>Text</type>
</CustomField>