sas-core/main/default/objects/Segment__c/fields/Check_In_Status__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Status__c</fullName>
    <label>Check In Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accepted</fullName>
                <default>true</default>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>NotAccepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>StandBy</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>