sas-core/main/default/objects/Segment__c/fields/Fare_Basis__c.field-meta.xml
<CustomField>
    <fullName>Fare_Basis__c</fullName>
    <label>Fare Basis</label>
    <length>10</length>
    <type>Text</type>
</CustomField>