sas-core/main/default/objects/Segment__c/fields/Fare_Price__c.field-meta.xml
<CustomField>
    <fullName>Fare_Price__c</fullName>
    <label>Fare Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>