sas-core/main/default/objects/Segment__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Segments</relationshipLabel>
    <relationshipName>Segments</relationshipName>
    <type>Lookup</type>
</CustomField>