sas-core/main/default/objects/Segment__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <description>A constant identifier to identify this segment in this booking. Smaller number also means this segment is earlier within the trip. Unique within the booking.</description>
    <inlineHelpText>A constant identifier to identify this segment in this booking. Smaller number also means this segment is earlier within the trip. Unique within the booking.</inlineHelpText>
    <label>Identifier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>