sas-core/main/default/objects/Segment__c/fields/Is_Boarded__c.field-meta.xml
<CustomField>
    <fullName>Is_Boarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Boarded</label>
    <type>Checkbox</type>
</CustomField>