sas-core/main/default/objects/Segment__c/fields/Seat__c.field-meta.xml
<CustomField>
    <fullName>Seat__c</fullName>
    <label>Seat</label>
    <length>5</length>
    <type>Text</type>
</CustomField>