sas-core/main/default/objects/Segment__c/fields/Segment_Status__c.field-meta.xml
<CustomField>
    <fullName>Segment_Status__c</fullName>
    <description>Status of this segment in the booking. Should be the same for all passengers for a given segment.</description>
    <inlineHelpText>Status of this segment in the booking. Should be the same for all passengers for a given segment.</inlineHelpText>
    <label>Segment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>CallToConfirm</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>SpaceAvailable</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Unconfirmed</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>