sas-core/main/default/objects/Segment__c/fields/Segment_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Segment_Status_Code__c</fullName>
    <description>Two letter code describing the segment status.</description>
    <inlineHelpText>Two letter code describing the segment status.</inlineHelpText>
    <label>Segment Status Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>