sas-core/main/default/objects/Segment__c/fields/Service_Class__c.field-meta.xml
<CustomField>
    <fullName>Service_Class__c</fullName>
    <label>Service Class</label>
    <length>10</length>
    <type>Text</type>
</CustomField>