sas-core/main/default/objects/Segment__c/fields/Special_Service_Requests__c.field-meta.xml
<CustomField>
    <fullName>Special_Service_Requests__c</fullName>
    <description>Special service codes for this segment. Separated by commas.</description>
    <inlineHelpText>Special service codes for this segment. Separated by commas.</inlineHelpText>
    <label>Special Service Requests</label>
    <length>100</length>
    <type>Text</type>
</CustomField>