sas-core/main/default/objects/Segment__c/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <label>Ticket Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>