sas-core/main/default/objects/Segment__c/fields/Trip_Type__c.field-meta.xml
<CustomField>
    <fullName>Trip_Type__c</fullName>
    <label>Trip Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>